--- a/views/home.html
+++ b/views/home.html
@@ -47,8 +47,69 @@
             </ul>
         </nav>
         </div>
+    
         
     </header>
-    
+    <section class="slider">
+        <div class="boton-izq">
+            <i class="fas fa-arrow-circle-left"></i>
+        </div>
+        <img src="img\slide-1626226883766-2870749949-6cd167443e459e68f3a17842adf194e61626226913-1024-1024.jpg"  alt="slider">
+        <div class="boton-derecho">
+            <i class="fas fa-arrow-circle-right"></i>
+        </div>
+    </section>
+    <main>
+        <section class="productos-disponibles">
+            <article>
+                <img src="img/Screenshot_20.png" alt="maceta1"> 
+                <div class="borra-espacio">
+                    <p>INTERIOR</p>
+                </div>
+            </article>
+            <article>           
+                <img src="img/macetas-de-exterior-de-diseno.jpg" alt="maceta2">
+                <div class="borra-espacio">
+                    <p>EXTERIOR</p>
+                </div>
+            </article>
+            <article>
+                <img src="img/Screenshot_15.png" alt="">
+                <div class="borra-espacio">
+                <p>ACCESORIOS</p>
+                </div>
+            </article>       
+        </section>
+        <section class="destacados">
+
+            <h2>DESTACADOS</h2>
+            <article>
+                <img src="img/Screenshot_20.png" alt="maceta1"> 
+                <div class="borra-espacio">
+                    <p>INTERIOR</p>
+                </div>
+            </article>
+        
+        </section>
+
+    </main>
+    <footer>
+        <div class="casa-malewo">
+        <h3>CASA MALEWO</h3>
+        <ul>
+            <li>productos</li>
+            <li>nosotros</li>
+            <li>blog</li>
+        </ul>
+        </div>
+        <div class="contacto">
+        <h3>CONTACTO</h3>
+        <ul>
+            <li><i class="fas fa-phone-alt"> </i> 4855 7679</li>
+            <li><i class="fab fa-whatsapp"> </i> +54 115896 3652</li>
+            <li><i class="far fa-envelope"> </i> info@casamalewo.com</li>
+        </ul>
+        </div>
+    </footer>
 </body>
 </html>
