arregle los directorios de las imagenes

--- a/views/home.html
+++ b/views/home.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="top-header">
-            <img src="img\logo.png" alt="logo">
+            <img src="img\logo.jpg" alt="logo">
             <h1>CASA MALEWO</h1>
             
             <div class="carrito">
@@ -54,7 +54,7 @@
         <div class="boton-izq">
             <i class="fas fa-arrow-circle-left"></i>
         </div>
-        <img src="img\slide-1626226883766-2870749949-6cd167443e459e68f3a17842adf194e61626226913-1024-1024.jpg"  alt="slider">
+        <img src="img\img-home\slide-1626226883766-2870749949-6cd167443e459e68f3a17842adf194e61626226913-1024-1024.jpg"  alt="slider">
         <div class="boton-derecho">
             <i class="fas fa-arrow-circle-right"></i>
         </div>
@@ -62,19 +62,19 @@
     <main>
         <section class="productos-disponibles">
             <article>
-                <img src="img/Screenshot_20.png" alt="maceta1"> 
+                <img src="img\img-home\Screenshot_20.png" alt="maceta1"> 
                 <div class="borra-espacio">
                     <p>INTERIOR</p>
                 </div>
             </article>
             <article>           
-                <img src="img/macetas-de-exterior-de-diseno.jpg" alt="maceta2">
+                <img src="img\img-home\macetas-de-exterior-de-diseno.jpg" alt="maceta2">
                 <div class="borra-espacio">
                     <p>EXTERIOR</p>
                 </div>
             </article>
             <article>
-                <img src="img/Screenshot_15.png" alt="">
+                <img src="img\img-home\Screenshot_15.png" alt="">
                 <div class="borra-espacio">
                 <p>ACCESORIOS</p>
                 </div>
@@ -84,7 +84,7 @@
 
             <h2>DESTACADOS</h2>
             <article>
-                <img src="img/Screenshot_20.png" alt="maceta1"> 
+                <img src="img\img-home\Screenshot_20.png" alt="maceta1"> 
                 <div class="borra-espacio">
                     <p>INTERIOR</p>
                 </div>
