agregue hover a algunos productos del home html

--- a/views/home.html
+++ b/views/home.html
@@ -61,23 +61,18 @@
     </section>
     <main>
         <section class="productos-disponibles">
-            <article>
+            <article class="a1">
                 <img src="img\img-home\Screenshot_20.png" alt="maceta1"> 
-                <div class="borra-espacio">
-                    <p>INTERIOR</p>
-                </div>
+                
+                    <p class="p1">INTERIOR</p>
             </article>
-            <article>           
+            <article class="a2">           
                 <img src="img\img-home\macetas-de-exterior-de-diseno.jpg" alt="maceta2">
-                <div class="borra-espacio">
-                    <p>EXTERIOR</p>
-                </div>
+                    <p class="p2">EXTERIOR</p>
             </article>
-            <article>
-                <img src="img\img-home\Screenshot_15.png" alt="">
-                <div class="borra-espacio">
-                <p>ACCESORIOS</p>
-                </div>
+            <article class="a3">
+                <img src="img\accesorios\Screenshot_15.png" alt="">
+                <p class="p3">ACCESORIOS</p>
             </article>       
         </section>
         <section class="destacados">
@@ -85,9 +80,7 @@
             <h2>DESTACADOS</h2>
             <article>
                 <img src="img\img-home\Screenshot_20.png" alt="maceta1"> 
-                <div class="borra-espacio">
                     <p>INTERIOR</p>
-                </div>
             </article>
         
         </section>
