--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -141,17 +141,39 @@ right: 18px;
 .destacados img{
     width: 100%;
 }
-.borra-espacio{
-    position: relative;
-    bottom: 0;   
-    width: 100%;
-    margin-right: 40px;
-}
+
 .productos-disponibles p{
     text-align: center;
     background-color: rgb(233, 227, 227);
-    
+    position: relative;
+    bottom:33px;    
     border-bottom: gray solid 4px;
+}
+.productos-disponibles .a1 .p1{
+    opacity: 0;
+    transition: all 450ms;
+}
+
+.productos-disponibles .a1:hover .p1{
+    opacity: 70%;
+}
+.productos-disponibles .a2 .p2{
+    opacity: 0;
+    
+    transition: all 450ms;
+}
+
+.productos-disponibles .a2:hover .p2{
+    opacity: 70%;
+}
+.productos-disponibles .a3 .p3{
+    opacity: 0;
+    
+    transition: all 450ms;
+}
+
+.productos-disponibles .a3:hover .p3{
+    opacity: 70%;
 }
 .destacados p{
     text-align: center;
