agregue pagina compras

--- a/views/compras.html
+++ b/views/compras.html
@@ -12,10 +12,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@700&family=Poppins:wght@300;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <title>MALEWO || Home</title>
+    <title>MALEWO || Compras</title>
+
 </head>
 
 <body>
+
     <header>
 
         <div class="top-header">
@@ -62,43 +64,6 @@
             </nav>
         </div>
     </header>
-    <section class="slider">
-        <div class="boton-izq">
-            <i class="fas fa-arrow-circle-left"></i>
-        </div>
-        <img src="img\img-home\slide-1626226883766-2870749949-6cd167443e459e68f3a17842adf194e61626226913-1024-1024.jpg"
-            alt="slider">
-        <div class="boton-derecho">
-            <i class="fas fa-arrow-circle-right"></i>
-        </div>
-    </section>
-    <main>
-        <section class="productos-disponibles">
-            <article class="a1">
-                <img src="img\img-home\Screenshot_20.png" alt="maceta1">
-
-                <p class="p1">INTERIOR</p>
-            </article>
-            <article class="a2">
-                <img src="img\img-home\macetas-de-exterior-de-diseno.jpg" alt="maceta2">
-                <p class="p2">EXTERIOR</p>
-            </article>
-            <article class="a3">
-                <img src="img\accesorios\Screenshot_15.png" alt="">
-                <p class="p3">ACCESORIOS</p>
-            </article>
-        </section>
-        <section class="destacados">
-
-            <h2>DESTACADOS</h2>
-            <article>
-                <img src="img\img-home\Screenshot_20.png" alt="maceta1">
-                <p>INTERIOR</p>
-            </article>
-
-        </section>
-
-    </main>
     <footer>
         <section>
             <div class="style-bar2"></div>
@@ -109,6 +74,31 @@
                 <i class="fab fa-facebook-square"></i>
             </div>
         </section>
+        <main>
+            <div>
+                <h2>MIS COMPRAS</h2>
+            </div>
+            <div>
+                <h3>PRODUCTOS</h3>
+            </div>
+            <article class="producto-compra">
+                <img src="img/interior/Screenshot_10.png" alt="foto-producto-compra">
+                <p class="nombre-producto">NOMBRE DEL PRODICTO</p>
+            </article>
+            <div>
+                <p class="precio-unitario">PRECIO UNITARIO</p>
+                <p class="cantidad">CANTIDAD</p>
+            </div>
+
+            <div class="resumen-compra">
+                <p>RESUMEN DE COMPRA</p>
+                <P>SUBTOTAL</P>
+                <P>TOTAL</P>
+            </div>
+            <button class="finalizar-compra">FINALIZAR COMPRA</button>
+
+
+        </main>
         <section class="footer-info">
             <div class="casa-malewo">
                 <h4>CASA MALEWO</h4>
