--- a/views/home.html
+++ b/views/home.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="/css/styles.css ">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@700&family=Poppins:wght@300;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@700&family=Poppins:wght@300;700&display=swap"  rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <title>MALEWO || Home</title>
 </head>
@@ -74,16 +73,19 @@
     </section>
     <main>
         <section class="productos-disponibles">
-            <article class="a1">
+            <!-- <article class="a1"> -->
+            <article>
                 <img src="img\img-home\Screenshot_20.png" alt="maceta1">
+            
+            
 
                 <p class="p1">INTERIOR</p>
             </article>
-            <article class="a2">
+            <article><!-- <article class="a2"> -->
                 <img src="img\img-home\macetas-de-exterior-de-diseno.jpg" alt="maceta2">
                 <p class="p2">EXTERIOR</p>
             </article>
-            <article class="a3">
+            <article><!-- <article class="a3"> -->
                 <img src="img\accesorios\Screenshot_15.png" alt="">
                 <p class="p3">ACCESORIOS</p>
             </article>
