--- a/views/compras.html
+++ b/views/compras.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css ">
+    <link rel="stylesheet" href="/css/styles-compras.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@700&family=Poppins:wght@300;700&display=swap"
@@ -64,6 +65,39 @@
             </nav>
         </div>
     </header>
+
+    <main>
+        <section class="main-title">
+            <h3 class="create-account">MIS COMPRAS</h3>
+            <div class="style-bar1"></div>
+        </section>
+        <section class="main-title">
+            <h3 class="create-account">PRODUCTOS</h3>
+            <div class="style-bar1"></div>
+        </section>
+
+        <section class="contenedor">
+            <article class="producto-compra">
+                <img class="foto-producto-compra" src="img/interior/Screenshot_10.png" alt="foto-producto-compra">
+            </article>
+            <p class="nombre-producto">NOMBRE DEL PRODICTO</p>
+
+            <p class="precio-unitario">PRECIO UNITARIO</p>
+            <p class="cantidad">CANTIDAD</p>
+
+            <section>
+                <div class="resumen-compra">
+                    <p>RESUMEN DE COMPRA</p>
+                    <P>SUBTOTAL</P>
+                    <P>TOTAL</P>
+                </div>
+                <button class="finalizar-compra">FINALIZAR COMPRA</button>
+            </section>
+        </section>
+
+
+
+    </main>
     <footer>
         <section>
             <div class="style-bar2"></div>
@@ -74,31 +108,6 @@
                 <i class="fab fa-facebook-square"></i>
             </div>
         </section>
-        <main>
-            <div>
-                <h2>MIS COMPRAS</h2>
-            </div>
-            <div>
-                <h3>PRODUCTOS</h3>
-            </div>
-            <article class="producto-compra">
-                <img src="img/interior/Screenshot_10.png" alt="foto-producto-compra">
-                <p class="nombre-producto">NOMBRE DEL PRODICTO</p>
-            </article>
-            <div>
-                <p class="precio-unitario">PRECIO UNITARIO</p>
-                <p class="cantidad">CANTIDAD</p>
-            </div>
-
-            <div class="resumen-compra">
-                <p>RESUMEN DE COMPRA</p>
-                <P>SUBTOTAL</P>
-                <P>TOTAL</P>
-            </div>
-            <button class="finalizar-compra">FINALIZAR COMPRA</button>
-
-
-        </main>
         <section class="footer-info">
             <div class="casa-malewo">
                 <h4>CASA MALEWO</h4>
