termine el home

--- a/views/home.html
+++ b/views/home.html
@@ -90,9 +90,21 @@
                 <p class="p3">ACCESORIOS</p>
             </article>
         </section>
-        <section class="destacados">
+        <section class="titulo">
+            <h2 class="title-line">DESTACADOS </h2>
+        </section>
 
-            <h2>DESTACADOS</h2>
+        <section class="destacados">
+            <!-- <h2>DESTACADOS </h2> -->
+            
+            <article>
+                <img src="img\img-home\Screenshot_20.png" alt="maceta1">
+                <p>INTERIOR</p>
+            </article>
+            <article>
+                <img src="img\img-home\Screenshot_20.png" alt="maceta1">
+                <p>INTERIOR</p>
+            </article>
             <article>
                 <img src="img\img-home\Screenshot_20.png" alt="maceta1">
                 <p>INTERIOR</p>
