--- a/public/css/styles-register.css
+++ b/public/css/styles-register.css
@@ -6,14 +6,17 @@
 body {
     background-color: #F8F8F4;
 }
+li{
+    font-family: 'Poppins', sans-serif; 
+}
 
 h1{
     font-family: 'Antonio', sans-serif;
     color: white;
     text-align: center;
     position: relative;
-    top: -20px;
-    font-size: 45px;
+    top: 0;
+    font-size: 39px;
 }
 
 p{
@@ -31,9 +34,12 @@ header{
 }
 
 .header-social-icons{
-    display: flex;
+    display: none;
     justify-content: flex-end;
-    margin-right: 15px;
+    right: 20px;
+    position: absolute;
+    top: 0px
+    
 }
 
 header .header-social-icons i {
@@ -56,28 +62,30 @@ header div.top-header{
 
 header .top-header img{
     display: none;
-    padding: 5px 0px 5px 0px;
+    padding: 5px;
     width: 80px;
     position:absolute;
     left: 1%;
-    top:22px;
+    top:10px;
 }
 
 header div.top-header div.carrito{
-    align-self: flex-start;        
+    align-self: center;       
+    position: relative; 
 }
-
 header div.top-header .carrito i{
     font-size: 14px;
     color: white;
-    padding: 10px;
+    padding: 0px 5px;
+    position: relative;
+    top: 10px;
 }
 
 header div.top-header div.burger{
     order: -1;
-    padding: 10px;
+    padding: 5px 10px;
+    align-self: flex-end;
 }
-
 header div.top-header div.burger i{
     color: white;
     font-size: 1rem;
@@ -263,9 +271,12 @@ footer {
         display: flex;
 
     }
+    .header-social-icons{
+        display: flex;
+    }
     header div.top-header{
         justify-content: center;
-        padding: 15px;
+        padding: 0;
     }
     header div.top-header div.burger{
         display: none;
@@ -275,8 +286,6 @@ footer {
         
         
     }
-    .slider{
-        margin-top: 88px;    }
     h1{
         align-self: flex-start;
 
