--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,6 +3,9 @@
     margin: 0;
     
 }
+li {
+    font-family: 'Poppins', sans-serif; 
+}
 
 h1{
     font-family: 'Antonio', sans-serif;
@@ -25,6 +28,9 @@ header{
     background-color: black;
     width: 100%;
     padding-bottom: 20px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
 }
 
 .header-social-icons{
@@ -71,7 +77,7 @@ header div.top-header div.carrito{
 header div.top-header .carrito i{
     font-size: 14px;
     color: white;
-    padding: 0px 5px;
+    padding: 0px 9px;
     position: relative;
     top: 10px;
 }
@@ -167,14 +173,19 @@ header li {
     display: flex;
     text-align: center;
     align-items: center;
-    margin-top: 0px;
+    margin-top: 95px;
+
     
 }
 .slider img{
     width: 100%;
 }
+.boton-izq{
+    position: relative;
+    left: 2px;
+}
 .boton-derecho {
-position: absolute;
+position: relative;
 right: 18px;
 }
 .slider i{
@@ -205,13 +216,27 @@ right: 18px;
 .destacados img{
     width: 100%;
 }
+.titulo{
+    padding: 5%;
+}
+.title-line{
+    overflow: hidden;
+}
+.title-line:after{
+    content:'';
+    display:inline-block;
+    width:100%; height:100%;
+    margin-right:-100%;
+    border-bottom:1px solid #000;
+}
+
 
 
 .productos-disponibles p{
     text-align: center;
     background-color: rgb(233, 227, 227);
     position: relative;
-    bottom:33px;    
+    bottom: 4px;  
     border-bottom: gray solid 4px;
 }
 /* .productos-disponibles .a1 .p1{
@@ -244,8 +269,8 @@ right: 18px;
     text-align: center;
     background-color: rgb(233, 227, 227);
     position: relative;
+    bottom: 4px;
     /* transition: all 450ms; */
-    bottom: 33px;
     /* opacity: 0; */
     border-bottom: gray solid 4px;
 }
@@ -330,8 +355,10 @@ footer {
         
         
     }
-    .slider{
-        margin-top: 88px;    }
+    
+    .slider {
+        padding: 40px 10% 0 10%;
+    }
     h1{
         align-self: flex-start;
 
@@ -340,6 +367,20 @@ footer {
     }
     .inicio-sesion{
         display: flex;
+    }
+    .productos-disponibles{
+        flex-wrap: nowrap;
+        padding: 0 10%;
+    }
+    .destacados {
+        display: flex;
+        justify-content: center;
+        padding: 0 10%
+    }
+    .destacados article{
+        
+        width: 33%;
+        
     }
 }
 
