actualize html de compras.html para que quede con el header fixed

--- a/public/css/styles-compras.css
+++ b/public/css/styles-compras.css
@@ -14,7 +14,9 @@
     flex-wrap: wrap;
     justify-content: space-between;
 }
-
+main{
+    margin-top: 95px;
+}
 .main-title {
     display: flex;
     flex-direction: row;
