--- a/public/css/styles-register.css
+++ b/public/css/styles-register.css
@@ -12,8 +12,8 @@ h1{
     color: white;
     text-align: center;
     position: relative;
-    top: -20px;
-    font-size: 45px;
+    top: 0px;
+    font-size: 39px;
 }
 
 p{
@@ -31,9 +31,12 @@ header{
 }
 
 .header-social-icons{
-    display: flex;
+    display: none;
     justify-content: flex-end;
-    margin-right: 15px;
+    right: 20px;
+    position: absolute;
+    top: 0px
+    
 }
 
 header .header-social-icons i {
@@ -56,26 +59,30 @@ header div.top-header{
 
 header .top-header img{
     display: none;
-    padding: 5px 0px 5px 0px;
+    padding: 5px;
     width: 80px;
     position:absolute;
     left: 1%;
-    top:22px;
+    top:20px;
 }
 
 header div.top-header div.carrito{
-    align-self: flex-start;        
+    align-self: center;       
+    position: relative; 
 }
 
 header div.top-header .carrito i{
     font-size: 14px;
     color: white;
-    padding: 10px;
+    padding: 0px 5px;
+    position: relative;
+    top: 10px;
 }
 
 header div.top-header div.burger{
     order: -1;
-    padding: 10px;
+    padding: 5px 10px;
+    align-self: flex-end;
 }
 
 header div.top-header div.burger i{
@@ -261,7 +268,6 @@ footer {
 @media(min-width: 542px){
     nav{
         display: flex;
-
     }
     header div.top-header{
         justify-content: center;
@@ -286,8 +292,9 @@ footer {
     .inicio-sesion{
         display: flex;
     }
-
-
+    .header-social-icons{
+        display: flex;
+    }
 }
 
 @media (min-width: 1000px) {
