--- a/views/login.html
+++ b/views/login.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css ">
+    <link rel="stylesheet" href="/css/styles-login.css ">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@700&family=Poppins:wght@300;700&display=swap"  rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@700&family=Poppins:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
-    <title>MALEWO || Home</title>
+    <title>Login</title>
 </head>
-
 <body>
     <header>
-
+        <div class="header-social-icons">
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-facebook-square"></i>
+        </div>
         <div class="top-header">
-            <div class="header-social-icons">
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-facebook-square"></i>
-            </div>
             <img src="img\logo.jpg" alt="logo">
             <h1>CASA MALEWO</h1>
             <div class="carrito">
@@ -35,10 +32,6 @@
         <div class="inicio-sesion">
             <ul class="login-ul">
                 <li>
-                    <i class="far fa-user-circle header-icon"></i>
-                    <a href="/login"> INICIAR SESIÓN</a>
-                </li>
-                <li>
                     <i class="fas fa-shopping-bag header-icon"></i>
                 </li>>
             </ul>
@@ -50,7 +43,7 @@
                         <a href="/" class="a-inicio">INICIO</a>
                     </li>
                     <li>
-                        <a href="/products">PRODUCTOS</a>
+                        <a href="/products">PRODUCTOS</a> 
                     </li>
                     <li>
                         <a href="/info">¿QUIENES SOMOS?</a>
@@ -62,45 +55,21 @@
             </nav>
         </div>
     </header>
-    <section class="slider">
-        <div class="boton-izq">
-            <i class="fas fa-arrow-circle-left"></i>
-        </div>
-        <img src="img\img-home\slide-1626226883766-2870749949-6cd167443e459e68f3a17842adf194e61626226913-1024-1024.jpg"
-            alt="slider">
-        <div class="boton-derecho">
-            <i class="fas fa-arrow-circle-right"></i>
-        </div>
-    </section>
     <main>
-        <section class="productos-disponibles">
-            <!-- <article class="a1"> -->
-            <article>
-                <img src="img\img-home\Screenshot_20.png" alt="maceta1">
-            
-            
-
-                <p class="p1">INTERIOR</p>
-            </article>
-            <article><!-- <article class="a2"> -->
-                <img src="img\img-home\macetas-de-exterior-de-diseno.jpg" alt="maceta2">
-                <p class="p2">EXTERIOR</p>
-            </article>
-            <article><!-- <article class="a3"> -->
-                <img src="img\accesorios\Screenshot_15.png" alt="">
-                <p class="p3">ACCESORIOS</p>
-            </article>
+        <section class="main-title">
+            <h3 class="create-account">Iniciar sesión</h3>
+            <div class="style-bar1"></div>
         </section>
-        <section class="destacados">
-
-            <h2>DESTACADOS</h2>
-            <article>
-                <img src="img\img-home\Screenshot_20.png" alt="maceta1">
-                <p>INTERIOR</p>
-            </article>
-
+        <section class="form-section">
+            <form class="form">
+                <label for="email" class="form-item">Email</label>
+                <input type="email" id="email" name="email" class="form-item">
+                <label for="password" class="form-item">Contraseña</label>
+                <input type="password" id="password" name="password" class="form-item">
+                <a href="/retrieve-Acount" class="form-item">¿Has olvidado tu contraseña?</a>
+                <button type="submit" class="form-item">Iniciar Sesión</button>
+            </form>
         </section>
-
     </main>
     <footer>
         <section>
@@ -132,5 +101,4 @@
         </section>
     </footer>
 </body>
-
 </html>
