--- a/public/css/styles-register.css
+++ b/public/css/styles-register.css
@@ -31,6 +31,10 @@ header{
     background-color: black;
     width: 100%;
     padding-bottom: 20px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    position: fixed;
 }
 
 .header-social-icons{
