casi terminé pagina de productos - agregue link para ir al inicio en el titulo y el logo del header y tambien algun otro link que faltaba del header - terminé home.html

--- a/public/css/styles-login.css
+++ b/public/css/styles-login.css
@@ -41,7 +41,7 @@ input {
     height: 40px;
 }
 
-a {
+.form a {
     align-self: center;
     font-family: 'Poppins', sans-serif;
     color: #8B8D8A;
