--- a/views/products.html
+++ b/views/products.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css ">
+    <link rel="stylesheet" href="/css/styles-products.css ">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@700&family=Poppins:wght@300;700&display=swap"  rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-
-    <title>MALEWO || Home</title>
+    <title>MALEWO || Products</title>
 </head>
 
 <body>
@@ -24,10 +24,10 @@
             <div class="header-social-icons">
                 <i class="fab fa-instagram"></i>
                 <i class="fab fa-facebook-square"></i>
-            </div>
+            </div> 
             <a class="logo-img" href="/" style="text-decoration: none;">
-            <img src="img\logo.jpg" alt="logo">
-            </a>
+                <img src="img\logo.jpg" alt="logo">
+                </a>
             <a href="/" style="text-decoration: none;">
                 <h1>CASA MALEWO</h1>
             </a>
@@ -70,58 +70,93 @@
             </nav>
         </div>
     </header>
-    <section class="slider">
-        <div class="boton-izq">
-            <i class="fas fa-arrow-circle-left"></i>
-        </div>
-        <img src="img\img-home\slide-1626226883766-2870749949-6cd167443e459e68f3a17842adf194e61626226913-1024-1024.jpg"
-            alt="slider">
-        <div class="boton-derecho">
-            <i class="fas fa-arrow-circle-right"></i>
-        </div>
-    </section>
     <main>
-        <section class="productos-disponibles">
-            <!-- <article class="a1"> -->
-            <article>
-                <img src="img\img-home\Screenshot_20.png" alt="maceta1">
-            
-            
-
-                <p class="p1">INTERIOR</p>
-            </article>
-            <article><!-- <article class="a2"> -->
-                <img src="img\img-home\macetas-de-exterior-de-diseno.jpg" alt="maceta2">
-                <p class="p2">EXTERIOR</p>
-            </article>
-            <article><!-- <article class="a3"> -->
-                <img src="img\accesorios\Screenshot_15.png" alt="">
-                <p class="p3">ACCESORIOS</p>
-            </article>
-        </section>
+        
         <section class="titulo">
-            <h2 class="title-line">DESTACADOS </h2>
+            <h2 class="title-line">PRODUCTOS </h2>
         </section>
+        
+        <div class="filtros">
+            <p></i>Filtros<i class="fas fa-filter"></i></p>
+        </div>
+        
+        <section class="buscador">
+                
+    
+            <input type="search" name="busquedamusica" placeholder="buscar productos">
+            <i class="fas fa-search" style="color: grey;"></i>        
+            <!-- <input type="submit" value="Buscar"> -->
+        
+        </section>
+        <section class="catalogo">
+            <div class="lista-filtros">
+                <h2 class="title-line-grey"></h2>
+                <ul>
+                    <li> 
+                        <a href="*">MACETAS DE INTERIOR</a><i class="fas fa-plus"></i>
+                    </li>
+                    <li> <a href="*"> MACETAS DE EXTERIOR</a><i class="fas fa-plus"></i>
+                    </li>
+                    <li style="margin-top: 7px;"><a href="*"> ACCESORIOS </a><i class="fas fa-plus" style="align-self: flex-end;"></i>
+                    
 
-        <section class="destacados">
-            <!-- <h2>DESTACADOS </h2> -->
-            
-            <article>
-                <img src="img\img-home\Screenshot_20.png" alt="maceta1">
-                <p>INTERIOR</p>
-            </article>
-            <article>
-                <img src="img\img-home\Screenshot_20.png" alt="maceta1">
-                <p>INTERIOR</p>
-            </article>
-            <article>
-                <img src="img\img-home\Screenshot_20.png" alt="maceta1">
-                <p>INTERIOR</p>
-            </article>
+                    </li>
+                </ul>
+                <h2 class="title-line-grey"></h2>
+                <ul>
+                    <li> <a href="*">COLOR</a> <i class="fas fa-plus"></i>
+                    </li>
+                </ul>
+                <h2 class="title-line-grey"></h2>
+                <ul>
+                    <li><a href="*"> FILTRAR POR PRECIO</a><i class="fas fa-plus"></i>
+                    </li>
+                </ul>
 
+            </div>
+            <div class="lista-de-productos">
+                <article>
+                    <img src="img\productos\1.jpg" alt="maceta1">
+                    <p>MACETA 1</p>
+                </article>
+                <article>
+                    <img src="img\productos\2.png" alt="maceta1">
+                    <p>MACETA 2</p>
+                </article>
+                <article>
+                    <img src="img\productos\3.jpg" alt="maceta1">
+                    <p>MACETA 3</p>
+                </article>
+                <article>
+                    <img src="img\productos\4.png" alt="maceta1">
+                    <p>MACETA 4</p>
+                </article>
+                <article>
+                    <img src="img\productos\5.jpg" alt="maceta1">
+                    <p>MACETA 5</p>
+                </article>
+                <article>
+                    <img src="img\productos\6.jpg" alt="maceta1">
+                    <p>MACETA 6</p>
+                </article>
+                <article>
+                    <img src="img\productos\7.jpg" alt="maceta1">
+                    <p>MACETA 7</p>
+                </article>
+                <article>
+                    <img src="img\productos\8.jpg" alt="maceta1">
+                    <p>MACETA 8</p>
+                </article>
+                <article>
+                    <img src="img\productos\9.jpg" alt="maceta1">
+                    <p>MACETA 9</p>
+                </article>
+
+            </div>
         </section>
 
     </main>
+    
     <footer>
         <section>
             <div class="style-bar2"></div>
@@ -151,6 +186,5 @@
             </div>
         </section>
     </footer>
-</body>
 
-</html>
+</body>
