--- a/views/compras.html
+++ b/views/compras.html
@@ -26,10 +26,15 @@
                 <i class="fab fa-instagram"></i>
                 <i class="fab fa-facebook-square"></i>
             </div>
-            <img src="img\logo.jpg" alt="logo">
+            <a class="logo-img" href="/" style="text-decoration: none;">
+                <img src="img\logo.jpg" alt="logo">
+                </a>
+            <a href="/" style="text-decoration: none;">
             <h1>CASA MALEWO</h1>
-            <div class="carrito">
+            </a>
+            <div class="carrito"><a href="/compras">
                 <i class="fas fa-shopping-bag"></i>
+            </a>
             </div>
             <div class="burger">
                 <i class="fas fa-bars"></i>
