--- a/views/product-detail.html
+++ b/views/product-detail.html
@@ -19,10 +19,17 @@
             <i class="fab fa-facebook-square"></i>
         </div>
         <div class="top-header">
-            <img src="img\logo.jpg" alt="logo">
-            <h1>CASA MALEWO</h1>
+            <a class="logo-img" href="/" style="text-decoration: none;">
+                <img src="img\logo.jpg" alt="logo">
+                </a>
+            <a href="/" style="text-decoration: none;">
+                <h1>CASA MALEWO</h1>
+            </a>
             <div class="carrito">
-                <i class="fas fa-shopping-bag"></i>
+            
+                <a href="/compras">
+                    <i class="fas fa-shopping-bag"></i>
+                </a>
             </div>
             <div class="burger">
                 <i class="fas fa-bars"></i>
@@ -35,7 +42,7 @@
                     <a href="/login"> INICIAR SESIÓN</a>
                 </li>
                 <li>
-                    <i class="fas fa-shopping-bag header-icon"></i>
+                    <a href="/compras"><i class="fas fa-shopping-bag header-icon"></i></a>
                 </li>>
             </ul>
         </div>
