--- a/views/register.html
+++ b/views/register.html
@@ -23,11 +23,18 @@
             <i class="fab fa-facebook-square"></i>
         </div>
         <div class="top-header">
-            <img src="img\logo.jpg" alt="logo">
-            <h1>CASA MALEWO</h1>
-            <div class="carrito">
-                <i class="fas fa-shopping-bag"></i>
-            </div>
+            <a class="logo-img" href="/" style="text-decoration: none;">
+                <img src="img\logo.jpg" alt="logo">
+                </a>
+            <a href="/" style="text-decoration: none;">
+                <h1>CASA MALEWO</h1>
+            </a>
+            
+                <div class="carrito">
+                    <a href="/compras">
+                    <i class="fas fa-shopping-bag"></i>
+                </a>
+                </div>
             <div class="burger">
                 <i class="fas fa-bars"></i>
             </div>
@@ -39,7 +46,7 @@
                     <a href="/login"> INICIAR SESIÓN</a>
                 </li>
                 <li>
-                    <i class="fas fa-shopping-bag header-icon"></i>
+                    <a href="/compras"><i class="fas fa-shopping-bag header-icon"></i></a>
                 </li>>
             </ul>
         </div>
