--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -291,11 +291,17 @@ right: 27px;
 
 
 } */
-article img {
+article img{
+    transition: box-shadow 450ms;
+}
+article p{
     transition: box-shadow 450ms;
 }
 article:hover img{
     box-shadow: 0px 0px 10px rgb(100 100 100);
+}
+article:hover p{
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
 }
 
 
